--- a/Controller/src/main/resources/templates/home-layout.html
+++ b/Controller/src/main/resources/templates/home-layout.html
@@ -73,7 +73,6 @@
 
             // alert(requestTitle);
 
-
             var request={
                 "title": requestTitle,
                 "text": requestMessage,
@@ -102,6 +101,8 @@
 
         // Document ready function
         $(function () {
+            var width_input=$( '.search-bar-parent-div' ).width();
+
             var button = $('#srch');
             var tooltip;
 
@@ -117,7 +118,7 @@
                 if (l == 0) {
                     l = 1;
                     tooltip = new maTooltip(button, {
-                        inline_style: 'max-width: none; border-radius:8px; width: 420px; overflow: hidden; padding: 0pc;background-color: #00000029;',
+                        inline_style: 'max-width: none; border-radius:8px; width:'+width_input+'px; overflow: hidden; padding: 0pc;border: 1px #e7e7e7 solid;background-color: #fbfbfb;',
                         full_visibility_duration: 999999999,
                         position: maTooltip.POSITION.BOTTOM,
                         static_message: `<div id="srh" class="container-fluid p-0" style="    background-color: #fbfbfb; color: black; border-radius: inherit;   ">   
@@ -136,7 +137,7 @@
                             $('.maTooltip-BOTTOM').remove()
                         }
                         var elem = "";
-                        elem += `<div class ="row er p-2"  style="border-bottom: 1px  solid #00000029;">
+                        elem += `<div class ="row er p-2 mb-1"  style="border-bottom: 1px  solid #00000029;">
                                      <div class="col-6" style="font-size: 14px; text-align: left;">
                                         TITLE
                                      </div>
@@ -146,7 +147,7 @@
                                  </div>`
                         for (i = 0; i < obj._embedded.contents.length; i++) {
                             elem += `
-                        <div onclick="window.location.href ='/detail/${obj._embedded.contents[i].id}'" class="row er    mb-2 pt-2" style=" !important;  cursor: pointer" >
+                        <div onclick="window.location.href ='/detail/${obj._embedded.contents[i].id}'" class="row er    mb-0 pt-2" style=" !important;  cursor: pointer; padding-bottom: 7px" >
                             <div class="col-3 " ><img class=" rounded-circle z-depth-2 myButton point" style="width: 32px;margin-right: -20px; height: 32px" src=${obj._embedded.contents[i].thumbnail} alt=""></div>
                             <div class="col-9 pl-0 outerDiv" style="font-size: 14px; text-align: left; vertical-align: middle;"><div class ="innerDiv" style="line-height: 1.4;">${obj._embedded.contents[i].title}</div></div>
                         </div>
@@ -299,7 +300,7 @@
                 </a>`
         }
         const convertAdminJsonToNotificationList = (article_id,comment_body,time) => {
-            return ` <a class="notifications-content" href="${article_id}">
+            return ` <a class="notifications-content" href="/detail/${article_id}">
                             <div class="notifications-item border-bottom">
                                 <p class="item-title">${comment_body}</b></p>
                                 <p class="item-info text-muted">${time}</p>
