--- a/Controller/src/main/resources/templates/search-body.html
+++ b/Controller/src/main/resources/templates/search-body.html
@@ -72,7 +72,7 @@
                 padding: 0;
             }
         </style>
-        <div class="container" id="con">
+        <div class="container-fluid" id="con">
             <br>
             <div class="row">
                 <div class="col-1"> </div>
@@ -82,7 +82,7 @@
             </div>
             <br>
         </div>
-        <div class="container pb-5">
+        <div class="container-fluid pb-5">
             <div class="row">
                 <div class="col-4">
 
