--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -129,7 +129,9 @@
         font-size: 14px;
     }
 
-
+    .er:hover{
+        background-color: #f0ebe3;
+    }
 
     .page-active {
         border-bottom: 2px solid #f89808;
