--- a/Controller/src/main/resources/templates/admin/admin-article-insert.html
+++ b/Controller/src/main/resources/templates/admin/admin-article-insert.html
@@ -388,7 +388,7 @@
                 });
                 //TO SEARCH CATEGORIES
                 $(function(){
-                    // $('.card-text').html($('.card-text').html().replace(/(<([^>]+)>)/ig, ""));
+                    // $('.card-text').html($('.card-text').html().replace(/(<([^>]+)>)/ig, ""));$('.card-text').html('sa')
                     jQuery.expr[':'].icontains = function(a, i, m) {
                         return jQuery(a).text().toUpperCase()
                             .indexOf(m[3].toUpperCase()) >= 0;
